[package]
name = "modulee-engine-wasm"
version = "1.2.2"
authors = ["Yolisses <yolisses0@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4.6"
wasm-log = "0.3"
wasm-bindgen = "0.2.84"
modulee-engine = { path = "vendor/modulee-engine" }
getrandom = { version = "0.3", features = ["wasm_js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[[bin]]
name = "build_pkg"
path = "build_pkg.rs"
